--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -57,21 +57,21 @@
 
 
                         <li class="bg-primary-dark text-white mb-3 px-3 py-2 rounded-2"><a
-                              class="text-white text-decoration-none h-100 w-100" href="#">Profile</a></li>
-                        <li class="bg-primary-dark text-white mb-3 px-3 py-2 rounded-2"><a
-                              class="text-white text-decoration-none" href="#">Informations</a></li>
+                              class="text-white text-decoration-none h-100 w-100" href="profile.html">Profile</a></li>
 
                         <li class="bg-primary-dark text-white px-3 py-2 rounded-2"><a
-                              class="text-white text-decoration-none" href="#">Add New Task</a></li>
+                              class="text-white text-decoration-none" href="add-new-task.html">Add New Task</a></li>
 
 
                      </ul>
                   </div>
 
-                  <div style="width: 32px; height: 32px; min-width: 32px;"
-                     class="bg-danger rounded-2 d-flex justify-content-center align-items-center border border-3 border-white shadow-sm me-3">
-                     <i class="fas fa-times fs-16 text-white "></i>
-                  </div>
+                  <a href="login.html" class="text-decoration-none">
+                     <div style="width: 32px; height: 32px; min-width: 32px;"
+                        class="bg-danger rounded-2 d-flex justify-content-center align-items-center border border-3 border-white shadow-sm me-3">
+                        <i class="fas fa-times fs-16 text-white "></i>
+                     </div>
+                  </a>
 
                </div>
             </div>
@@ -84,7 +84,13 @@
    <!-- Home Page Title Section Html Code Start -->
 
    <section id="page-title" class="my-5">
-      <h1 class="fs-48 text-dark fw-bolder text-center">Home</h1>
+      <div class="container-md container-fluid">
+         <div class="row flex-row align-items-center">
+            <div class="col-12">
+               <h1 class="fs-md-48 fs-32 text-dark fw-bolder text-center d-block">Home</h1>
+            </div>
+         </div>
+      </div>
    </section>
 
    <!-- Home Page Title Section Html Code End-->
@@ -123,14 +129,15 @@
                                           id="exampleCheck1">
                                     </div>
 
-                                    <button name="edit" style="width: 28px; height: 28px;" type="button"
+                                    <a href="task-editing.html" name="edit" style="width: 28px; height: 28px;"
+                                       type="button"
                                        class="btn btn-success d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-pen fs-16"></i>
-                                    </button>
-                                    <button name="delete" style="width: 28px; height: 28px;" type="button"
+                                    </a>
+                                    <a href="home.html" name="delete" style="width: 28px; height: 28px;" type="button"
                                        class="btn btn-danger d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-times fs-16 text-white "></i>
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <p class="card-text mt-2 mb-4 text-muted">This is a wider card with supporting text below
@@ -168,14 +175,15 @@
                                           id="exampleCheck1">
                                     </div>
 
-                                    <button name="edit" style="width: 28px; height: 28px;" type="button"
+                                    <a href="task-editing.html" name="edit" style="width: 28px; height: 28px;"
+                                       type="button"
                                        class="btn btn-success d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-pen fs-16"></i>
-                                    </button>
-                                    <button name="delete" style="width: 28px; height: 28px;" type="button"
+                                    </a>
+                                    <a href="home.html" name="delete" style="width: 28px; height: 28px;" type="button"
                                        class="btn btn-danger d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-times fs-16 text-white "></i>
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <p class="card-text mt-2 mb-4 text-muted">This is a wider card with supporting text below
@@ -213,14 +221,15 @@
                                           id="exampleCheck1">
                                     </div>
 
-                                    <button name="edit" style="width: 28px; height: 28px;" type="button"
+                                    <a href="task-editing.html" name="edit" style="width: 28px; height: 28px;"
+                                       type="button"
                                        class="btn btn-success d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-pen fs-16"></i>
-                                    </button>
-                                    <button name="delete" style="width: 28px; height: 28px;" type="button"
+                                    </a>
+                                    <a href="home.html" name="delete" style="width: 28px; height: 28px;" type="button"
                                        class="btn btn-danger d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-times fs-16 text-white "></i>
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <p class="card-text mt-2 mb-4 text-muted">This is a wider card with supporting text below
@@ -258,14 +267,15 @@
                                           id="exampleCheck1">
                                     </div>
 
-                                    <button name="edit" style="width: 28px; height: 28px;" type="button"
+                                    <a href="task-editing.html" name="edit" style="width: 28px; height: 28px;"
+                                       type="button"
                                        class="btn btn-success d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-pen fs-16"></i>
-                                    </button>
-                                    <button name="delete" style="width: 28px; height: 28px;" type="button"
+                                    </a>
+                                    <a href="home.html" name="delete" style="width: 28px; height: 28px;" type="button"
                                        class="btn btn-danger d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-times fs-16 text-white "></i>
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <p class="card-text mt-2 mb-4 text-muted">This is a wider card with supporting text below
@@ -303,14 +313,15 @@
                                           id="exampleCheck1">
                                     </div>
 
-                                    <button name="edit" style="width: 28px; height: 28px;" type="button"
+                                    <a href="task-editing.html" name="edit" style="width: 28px; height: 28px;"
+                                       type="button"
                                        class="btn btn-success d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-pen fs-16"></i>
-                                    </button>
-                                    <button name="delete" style="width: 28px; height: 28px;" type="button"
+                                    </a>
+                                    <a href="home.html" name="delete" style="width: 28px; height: 28px;" type="button"
                                        class="btn btn-danger d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-times fs-16 text-white "></i>
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <p class="card-text mt-2 mb-4 text-muted">This is a wider card with supporting text below
@@ -348,14 +359,15 @@
                                           id="exampleCheck1">
                                     </div>
 
-                                    <button name="edit" style="width: 28px; height: 28px;" type="button"
+                                    <a href="task-editing.html" name="edit" style="width: 28px; height: 28px;"
+                                       type="button"
                                        class="btn btn-success d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-pen fs-16"></i>
-                                    </button>
-                                    <button name="delete" style="width: 28px; height: 28px;" type="button"
+                                    </a>
+                                    <a href="home.html" name="delete" style="width: 28px; height: 28px;" type="button"
                                        class="btn btn-danger d-flex justify-content-center align-items-center rounded-2">
                                        <i class="fas fa-times fs-16 text-white "></i>
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <p class="card-text mt-2 mb-4 text-muted">This is a wider card with supporting text below
@@ -384,21 +396,21 @@
             <div class="d-none d-md-block col-md-4 col-lg-4 col-xl-3 bg-primary">
                <aside style="top: 82px; z-index: 1;" id="sidebar"
                   class="d-flex justify-content-center mt-4 gap-3 flex-column mx-3 sticky-top">
-                  <button type="button"
+                  <a href="add-new-task.html"
                      class="btn btn-primary-dark d-flex justify-content-start align-items-center rounded-1 px-md-3 py-2 fw-bold">
                      <i class="far fa-plus-square fs-16 text-white me-3 fw-bold text-nowrap"></i>
                      Add New Task
-                  </button>
-                  <button type="button"
+                  </a>
+                  <a href="home.html"
                      class="btn btn-light border-primary-dark d-flex justify-content-start align-items-center rounded-1 px-md-3 border-3 py-2 fw-bold text-nowrap">
                      <i class="fas fa-check fs-16 me-3 fw-bold"></i>
                      Completed Tasks
-                  </button>
-                  <button type="button"
+                  </a>
+                  <a href="home.html"
                      class="btn btn-light border-primary-dark d-flex justify-content-start align-items-center rounded-1 px-md-3 border-3 py-2 fw-bold text-nowrap">
                      <i class="far fa-trash-alt fs-16 me-3 fw-bold"></i>
                      Deleted Tasks
-                  </button>
+                  </a>
                </aside>
             </div>
          </div>
