--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -34,8 +34,10 @@
                                           class="form-control border-3 border-primary-dark fw-bold py-2 " id="password">
                                     </div>
                                     <div class=" w-100 mt-3">
-                                       <button type="submit"
-                                          class="btn btn-primary py-3 px-4 w-100 border-3 border-primary-dark text-white fw-bold fs-24 mb-3 ">Login</button>
+                                       <!-- <button type="submit"
+                                          class="btn btn-primary py-3 px-4 w-100 border-3 border-primary-dark text-white fw-bold fs-24 mb-3 ">Login</button> -->
+                                       <a href="home.html"
+                                          class="btn btn-primary py-3 px-4 w-100 border-3 border-primary-dark text-white fw-bold fs-24 mb-3 ">Login</a>
                                     </div>
                                  </form>
                               </div>
