--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Add New Task</title>
+   <title>Profile</title>
 
    <!--  Font  -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 
 <body>
 
-   <!--  Add New Task Header Section Html Code Start -->
+   <!--  Profile Header Section Html Code Start -->
 
    <header class="sticky-top ">
       <div class="container-lg container-fluid px-4">
@@ -55,7 +55,7 @@
                         <li class="bg-primary-dark text-white mb-3 px-3 py-2 rounded-2"><a
                               class="text-white text-decoration-none h-100 w-100" href="profile.html">Profile</a></li>
                         <li class="bg-primary-dark text-white px-3 py-2 rounded-2"><a
-                              class="text-white text-decoration-none" href="add-new-task.html">Add New Task</a></li>
+                              class="text-white text-decoration-none" href="add-new-task.html">Profile</a></li>
                      </ul>
                   </div>
                   <a href="login.html" class="text-decoration-none">
@@ -70,9 +70,9 @@
       </div>
    </header>
 
-   <!--  Add New Task Header Section Html Code End -->
+   <!--  Profile Header Section Html Code End -->
 
-   <!--  Add New Task Page Title Section Html Code Start -->
+   <!--  Profile Page Title Section Html Code Start -->
 
    <section id="page-title" class="my-5">
       <div class="container-md container-fluid">
@@ -88,9 +88,9 @@
       </div>
    </section>
 
-   <!--  Add New Task Page Title Section Html Code End-->
+   <!--  Profile Page Title Section Html Code End-->
 
-   <!--  Add New Task Content Section Html Code Start -->
+   <!--  Profile Content Section Html Code Start -->
 
    <section id="content" class="bg-primary-light min-vh-100">
       <div class="container-md container-fluid min-vh-100">
@@ -150,9 +150,9 @@
       </div>
    </section>
 
-   <!--  Add New Task Content Section Html Code End -->
+   <!--  Profile Content Section Html Code End -->
 
-   <!--  Add New Task Footer Section Html Code Start -->
+   <!--  Profile Footer Section Html Code Start -->
 
    <footer class="bg-primary-dark w-100">
       <div class="container">
@@ -164,7 +164,7 @@
       </div>
    </footer>
 
-   <!--  Add New Task Content Section Html Code End -->
+   <!--  Profile Content Section Html Code End -->
 
    <!--  Bootstrap Js  -->
    <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
